--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -460,8 +460,8 @@ app.listen(process.env.PORT, () => {...}
   href="https://typescript-eslint.io/rules/array-type/#generic"
 >{`'@typescript-eslint/array-type': ['error', { default: 'generic' }]`}</Rule>
 <Note>
-  As there is no functional difference between 'generic' and 'array' definition, feel free to set the one your team
-  finds most readable to work with.
+  Since there is no functional difference between the 'generic' and 'array' definitions, feel free to choose the one
+  that your team finds most readable.
 </Note>
 
 ```ts
