--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -731,7 +731,7 @@ While it's often hard to find the best name, aim to optimize code for consistenc
       {
         selector: 'variable',
         types: ['boolean'],
-        format: ['PascalCase'],
+        format: ['strictCamelCase'],
         prefix: ['is', 'should', 'has', 'can', 'did', 'will'],
       }
     ]
