--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -722,7 +722,7 @@ While it's often hard to find the best name, aim to optimize code for consistenc
   Camel case  
   `products`, `productsFiltered`
 - **Booleans**  
-   Prefixed with `is`, `has` etc.  
+   Camel case, prefixed with `is`, `has` etc.  
    `isDisabled`, `hasProduct`
   <!-- prettier-ignore-start -->
     <Rule href="https://typescript-eslint.io/rules/naming-convention">
