--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -732,7 +732,7 @@ While it's often hard to find the best name, aim to optimize code for consistenc
         selector: 'variable',
         types: ['boolean'],
         format: ['strictCamelCase'],
-        prefix: ['is', 'should', 'has', 'can', 'did', 'will'],
+        prefix: ['is', 'are', 'should', 'has', 'can', 'did', 'will'],
       }
     ]
     `}
