--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -884,7 +884,7 @@ Event handler implementation functions are prefixed as `handle*` - e.g. `handleC
 <Rule
   prefix="Camel case, prefixed as 'use'"
   href="https://github.com/facebook/react/tree/main/packages/eslint-plugin-react-hooks"
-/>
+>{`'react-hooks/rules-of-hooks': 'error'`}</Rule>
 <Rule
   prefix="Symmetrically convention as [value, setValue] = useState()"
   href="https://github.com/jsx-eslint/eslint-plugin-react/blob/master/docs/rules/hook-use-state.md#rule-details"
