--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -291,7 +291,8 @@ const IDLE_ORDER = {
 
 ### Template Literal Types
 
-Embrace template literal types instead of using the broad `string` type wherever possible.
+Template literal types allow you to create precise and type-safe string constructs by interpolating values. They are a powerful alternative to using the wide string type, providing better type safety and developer experience.
+
 Template literal types have many practical use cases, such as defining API endpoints, routes, internationalization, database queries, CSS typings etc.
 
 ```ts
