--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -293,7 +293,7 @@ const IDLE_ORDER = {
 
 Template literal types allow you to create precise and type-safe string constructs by interpolating values. They are a powerful alternative to using the wide string type, providing better type safety and developer experience.
 
-Adopting template literal types brings several advantages::
+Adopting template literal types brings several advantages:
 
 - Prevent errors caused by typos or invalid strings.
 - Provide better type safety and autocompletion support.
