--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -291,7 +291,7 @@ const IDLE_ORDER = {
 
 ### Template Literal Types
 
-Template literal types allow you to create precise and type-safe string constructs by interpolating values. They are a powerful alternative to using the wide string type, providing better type safety and developer experience.
+Embrace template literal types as they allow you to create precise and type-safe string constructs by interpolating values. They are a powerful alternative to using the wide string type, providing better type safety and developer experience.
 
 Adopting template literal types brings several advantages:
 
