--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -640,7 +640,12 @@ Strive to use const assertion `as const`:
 
 Const assertions must be used over enums.
 
-While enums can still fulfill similar use cases as const assertions, we tend to avoid using them. Some of the reasonings as mentioned in TypeScript documentation - [Const enum pitfalls](https://www.typescriptlang.org/docs/handbook/enums.html#const-enum-pitfalls), [Objects vs Enums](https://www.typescriptlang.org/docs/handbook/enums.html#objects-vs-enums), [Reverse mappings](https://www.typescriptlang.org/docs/handbook/enums.html#reverse-mappings) etc.
+While enums can still fulfill similar use cases as const assertions, we tend to avoid using them.  
+The TypeScript documentation highlights several reasons for this preference, such as:
+
+- [Const enum pitfalls](https://www.typescriptlang.org/docs/handbook/enums.html#const-enum-pitfalls)
+- [Objects vs Enums](https://www.typescriptlang.org/docs/handbook/enums.html#objects-vs-enums)
+- [Reverse mappings](https://www.typescriptlang.org/docs/handbook/enums.html#reverse-mappings)
 
 <Rule href="https://eslint.org/docs/latest/rules/no-restricted-syntax">{`'no-restricted-syntax': [
     'error',
