--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -641,7 +641,7 @@ Strive to use const assertion `as const`:
 Const assertions must be used over enums.
 
 While enums can still fulfill similar use cases as const assertions, we tend to avoid using them.  
-The TypeScript documentation highlights several reasons for this preference, such as:
+The TypeScript documentation highlights several reasons into the limitations and potential issues with enums, such as:
 
 - [Const enum pitfalls](https://www.typescriptlang.org/docs/handbook/enums.html#const-enum-pitfalls)
 - [Objects vs Enums](https://www.typescriptlang.org/docs/handbook/enums.html#objects-vs-enums)
