--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -669,11 +669,11 @@ enum Color {
   BRAND = '#9C0E7D',
 }
 
-// ✅ Use const assertion
+// ✅ Use const assertions
 const USER_ROLES = ['guest', 'moderator', 'administrator'] as const;
 type UserRole = (typeof USER_ROLES)[number]; // Type "guest" | "moderator" | "administrator"
 
-// Use satisfies if UserRole type is already defined - e.g. database schema model
+// Use 'satisfies' if the UserRole type is already defined, e.g., in a database schema model
 type UserRoleDB = ReadonlyArray<'guest' | 'moderator' | 'administrator'>;
 const AVAILABLE_ROLES = ['guest', 'moderator'] as const satisfies UserRoleDB;
 
@@ -682,6 +682,7 @@ const COLOR = {
   secondary: '#113A5C',
   brand: '#9C0E7D',
 } as const;
+
 type Color = typeof COLOR;
 type ColorKey = keyof Color; // Type "primary" | "secondary" | "brand"
 type ColorValue = Color[ColorKey]; // Type "#B33930" | "#113A5C" | "#9C0E7D"
