--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -651,7 +651,7 @@ The TypeScript documentation highlights several reasons into the limitations and
     'error',
     {
       selector: 'TSEnumDeclaration',
-      message: 'Use const assertion object or a literal type instead.',
+      message: 'Replace enum with a const assertion object or a literal type.',
     },
 ]`}</Rule>
 
